# MediterraneanYaru

./: README.md  meson.build
gtk/src/: meson.build
gtk/src/dark/: meson.build
gtk/src/dark/gtk-3.0/: install-dark-theme.sh
gtk/src/darkest/: meson.build
gtk/src/darkest-light/: meson.build
gtk/src/darkest-light/gtk-3.0/: install-darkest-light-theme.sh  meson.build
gtk/src/darkest-night/: meson.build
gtk/src/darkest-night/gtk-3.0/: install-darkest-night-theme.sh  meson.build
gtk/src/darkest-night/metacity-1/: meson.build
gtk/src/darkest-night/xfwm4/: meson.build
gtk/src/darkest/gtk-2.0/: meson.build
gtk/src/darkest/gtk-3.0/: install-darkest-theme.sh  meson.build
gtk/src/light/: meson.build
gtk/src/light/gtk-2.0/: meson.build
gtk/src/light/gtk-3.0/: _colors.scss  gtk-dark.css  gtk-dark.scss  gtk-darkest-light.css  gtk-darkest-night.css  gtk-darkest-night.scss  gtk-darkest.css  gtk-darkest.scss  gtk-night.css  gtk-night.scss  gtk.css  gtk.gresource.xml.in  gtk.scss  meson.build
gtk/src/light/gtk-3.20/: _apps.scss  _colors.scss  _ubuntu-colors.scss  gtk-dark.css  gtk-darkest-light.css  gtk-darkest-light.scss  gtk-darkest-night.css  gtk-darkest.css  gtk-night.css  gtk.css  gtk.gresource.xml.in  gtk.scss  meson.build
gtk/src/light/unity/: meson.build
gtk/src/night/: meson.build
gtk/src/night/gtk-3.0/: install-night-theme.sh  meson.build
