metacity_dir = join_paths(theme_dir, 'metacity-1')

# static theme files to copy
metacity_theme_data_sources = [
  'DWMWindow_CloseButton.Active_DisabledImage.png',
  'DWMWindow_CloseButton.Active_HotImage.png',
  'DWMWindow_CloseButton.Active_NormalImage.png',
  'DWMWindow_CloseButton.Active_PressedImage.png',
  'DWMWindow_MaximizeButton.Active_DisabledImage.png',
  'DWMWindow_MaximizeButton.Active_DisabledImage-back.png',
  'DWMWindow_MaximizeButton.Active_HotImage.png',
  'DWMWindow_MaximizeButton.Active_HotImage-back.png',
  'DWMWindow_MaximizeButton.Active_NormalImage.png',
  'DWMWindow_MaximizeButton.Active_NormalImage.svg',
  'DWMWindow_MaximizeButton.Active_NormalImage-back.png',
  'DWMWindow_MaximizeButton.Active_PressedImage.png',
  'DWMWindow_MaximizeButton.Active_PressedImage-bak.png',
  'DWMWindow_MinimizeButton.Active_DisabledImage.png',
  'DWMWindow_MinimizeButton.Active_HotImage.png',
  'DWMWindow_MinimizeButton.Active_NormalImage.png',
  'DWMWindow_MinimizeButton.Active_PressedImage.png',
  'DWMWindow_UnMaximizeButton.Active_DisabledImage.png',
  'DWMWindow_UnMaximizeButton.Active_DisabledImage-back.png',
  'DWMWindow_UnMaximizeButton.Active_HotImage.png',
  'DWMWindow_UnMaximizeButton.Active_HotImage-back.png',
  'DWMWindow_UnMaximizeButton.Active_NormalImage.png',
  'DWMWindow_UnMaximizeButton.Active_NormalImage.svg',
  'DWMWindow_UnMaximizeButton.Active_NormalImage-back.png',
  'DWMWindow_UnMaximizeButton.Active_PressedImage.png',
  'DWMWindow_UnMaximizeButton.Active_PressedImage-back.png',
  'maximize.png',
  'menu-focus.svg',
  'menu-focus-none.svg',
  'menu-focus-normal.svg',
  'menu-pressed.svg',
  'metacity-noise.png',
  'metacity-theme-1.xml',
  'metacity-theme-3.xml',
  'unmaximize.png'
]

# Install theme files
install_data(metacity_theme_data_sources, install_dir: metacity_dir)


