unity_dir = join_paths(theme_dir, 'unity')

# static theme files to copy
unity_theme_data_sources = [
  'close.png',
  'close_focused_normal.png',
  'close_focused_prelight.png',
  'close_focused_pressed.png',
  'close_unfocused.png',
  'close_unfocused_prelight.png',
  'close_unfocused_pressed.png',
  'maximize.png',
  'maximize_focused_normal.png',
  'maximize_focused_prelight.png',
  'maximize_focused_pressed.png',
  'maximize_unfocused.png',
  'maximize_unfocused_prelight.png',
  'maximize_unfocused_pressed.png',
  'minimize.png',
  'minimize_focused_normal.png',
  'minimize_focused_prelight.png',
  'minimize_focused_pressed.png',
  'minimize_unfocused.png',
  'minimize_unfocused_prelight.png',
  'minimize_unfocused_pressed.png',
  'unmaximize.png',
  'unmaximize_focused_normal.png',
  'unmaximize_focused_prelight.png',
  'unmaximize_focused_pressed.png',
  'unmaximize_unfocused.png',
  'unmaximize_unfocused_prelight.png',
  'unmaximize_unfocused_pressed.png'
]

# Install theme files
install_data(unity_theme_data_sources, install_dir: unity_dir)
